--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">JetPackComposePractice</string>
     <string name="title_activity_another">AnotherActivity</string>
+    <string name="title_activity_retrofit">RetrofitActivity</string>
 </resources>
