--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">JetPackComposePractice</string>
     <string name="title_activity_another">AnotherActivity</string>
     <string name="title_activity_retrofit">RetrofitActivity</string>
+    <string name="title_activity_on_boarding">OnBoardingActivity</string>
 </resources>
