--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="title_activity_another">AnotherActivity</string>
     <string name="title_activity_retrofit">RetrofitActivity</string>
     <string name="title_activity_on_boarding">OnBoardingActivity</string>
+    <string name="title_activity_note">NoteActivity</string>
 </resources>
