--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="title_activity_retrofit">RetrofitActivity</string>
     <string name="title_activity_on_boarding">OnBoardingActivity</string>
     <string name="title_activity_note">NoteActivity</string>
+    <string name="title_activity_nested_navigation">NestedNavigation</string>
+    <string name="title_activity_nav_graph">NavGraphActivity</string>
 </resources>
