--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="title_activity_note">NoteActivity</string>
     <string name="title_activity_nested_navigation">NestedNavigation</string>
     <string name="title_activity_nav_graph">NavGraphActivity</string>
+    <string name="title_activity_passing_data_nav_host">PassingDataNavHost</string>
 </resources>
