--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="title_activity_nested_navigation">NestedNavigation</string>
     <string name="title_activity_nav_graph">NavGraphActivity</string>
     <string name="title_activity_passing_data_nav_host">PassingDataNavHost</string>
+    <string name="title_activity_album_details">AlbumDetailsActivity</string>
 </resources>
