Learn TabLayout with Toolabar

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="increment_counter">Increment Counter</string>
     <string name="clicks">click: %d</string>
     <string name="title_activity_todo_main">TodoMainActivity</string>
+    <string name="title_activity_tab_layout">TabLayoutActivity</string>
 </resources>
