Learn Android Multiple permission without second request

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,7 @@
     <string name="title_activity_top_bar_nav_graph">TopBarNavGraphActivity</string>
     <string name="title_activity_paging3">Paging3Activity</string>
     <string name="title_activity_boarding_with_splash_screen">BoardingWithSplashScreen</string>
+    <string name="title_activity_permission">PermissionActivity</string>
 
 
 </resources>
