add Feature in Permission to Setting option for second time denied apps permit

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,6 +17,7 @@
     <string name="title_activity_paging3">Paging3Activity</string>
     <string name="title_activity_boarding_with_splash_screen">BoardingWithSplashScreen</string>
     <string name="title_activity_permission">PermissionActivity</string>
+    <string name="settings">Settings</string>
 
 
 </resources>
