--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,7 @@
     <string name="title_activity_boarding_with_splash_screen">BoardingWithSplashScreen</string>
     <string name="title_activity_permission">PermissionActivity</string>
     <string name="title_activity_notification">NotificationActivity</string>
+    <string name="title_activity_pagination_activtiy">PaginationActivtiy</string>
 
 
 </resources>
